# python-actions

./: README.md  pyproject.toml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml  python-build.yml  python-quality.yml  python-tests.yml
tests/: test_smoke.py
