[project]
name = "python-actions"
version = "0.1.0"
description = "Reusable GitHub Actions workflows for Python projects using uv"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
